--- a/cis350project/.settings/edu.umd.cs.findbugs.core.prefs
+++ b/cis350project/.settings/edu.umd.cs.findbugs.core.prefs
@@ -1,5 +1,6 @@
-#SpotBugs User Preferences
-#Thu Mar 01 23:30:35 EST 2018
+#FindBugs User Preferences
+#Sun Apr 22 22:55:44 EDT 2018
+cloud_id=edu.umd.cs.findbugs.cloud.doNothingCloud
 detectorAppendingToAnObjectOutputStream=AppendingToAnObjectOutputStream|true
 detectorAtomicityProblem=AtomicityProblem|true
 detectorBadAppletConstructor=BadAppletConstructor|false
